# GITLearn

./: LICENSE  README.md
HoverCraft/: mit_hovercraft.m
ProjectCodeSubmission/: README.md
ProjectCodeSubmission/Control/: README.md  controllerReset.py
ProjectCodeSubmission/Navigation/: README.md
ROSPackages/Control/pid/launch/: turtlesim.launch
ROSPackages/Control/pid/scripts/: translator.py
ROSPackages/Guidance/pure_pursuit/: CMakeLists.txt  package.xml  setup.py
ROSPackages/Guidance/pure_pursuit/nodes/: pp_ros
ROSPackages/Simulations/me696_turtlesim/: CMakeLists.txt  package.xml  setup.py
ROSPackages/Simulations/me696_turtlesim/config/: pp_circle_config.yaml
ROSPackages/Simulations/me696_turtlesim/launch/: .me696_turtlesim.launch.swp  dynamics_test.launch  me696_turtlesim.launch  (+1 more)
ROSPackages/description/: CMakeLists.txt  package.xml
ROSPackages/description/launch/: r2d2.launch
ROSPackages/description/src/: .model.xml.swp  model.xml  simpleBoatHull.stl
ROSPackages/guidance/: CMakeLists.txt  package.xml
ROSPackages/guidance/nodes/: pp_ros
ROSPackages/guidance/scripts/: config_window
ROSPackages/guidance/src/pure_pursuit/: pp.py
ROSPackages/parameter_server/: CMakeLists.txt  package.xml
ROSPackages/parameter_server/config/: circle.cfg  follower.cfg
ROSPackages/parameter_server/launch/: parm_server.launch
ROSPackages/parameter_server/nodes/: params_circle  params_follower  server  servertest
TurtleSimScripts/: circle_basic.py  config_window.py  pp_basic.py  pp_basic_fixed.py
me696_turtlesim/: CMakeLists.txt  package.xml  scripts
(+9 files in other folders)
