<?xml version="1.0"?>
<package format="2">
  <name>guidance</name>
  <version>0.0.0</version>
  <description>The guidance package</description>

  <maintainer email="atrimble@hawaii.edu">
    A Trimble, Director RIP Lab
  </maintainer>

  <license>TODO</license>

  <url type="website">http://rip.eng.hawaii.edu</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>turtlesim</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>turtlesim</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
